<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_layout_normal">

        <ImageView
            android:id="@+id/ivAdvertisementImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/advertisement"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clMainConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llJobDescriptionLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvJobTitleTextView"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvSalaryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_extra_small"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_layout_small"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvShareTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_share"
                android:drawablePadding="@dimen/padding_element_normal"
                android:text="@string/share"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_size_extra_small"
                android:textStyle="bold"
                android:foreground="?attr/selectableItemBackground"
                android:padding="@dimen/padding_element_normal"
                app:layout_constraintBottom_toBottomOf="@+id/llJobDescriptionLinearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/llJobDescriptionLinearLayout" />

            <LinearLayout
                android:id="@+id/llCompanyDetailsLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/padding_layout_normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llJobDescriptionLinearLayout">

                <TextView
                    android:id="@+id/tvCompanyNameTextView"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_company"
                    android:drawablePadding="@dimen/padding_element_normal"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_extra_small"/>

                <TextView
                    android:id="@+id/tvCompanyLocationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_location"
                    android:drawablePadding="@dimen/padding_element_normal"
                    android:textSize="@dimen/text_size_extra_small"
                    android:layout_marginTop="@dimen/margin_layout_small"/>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_circled_right_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/llCompanyDetailsLinearLayout"
                app:layout_constraintBottom_toBottomOf="@id/llCompanyDetailsLinearLayout"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvJobTagsRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_layout_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llCompanyDetailsLinearLayout"/>

            <LinearLayout
                android:id="@+id/llButtonsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvJobTagsRecyclerView"
                android:layout_marginTop="@dimen/margin_layout_normal">

                <ImageButton
                    android:id="@+id/ibKebabMenuImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_kebab_menu"
                    android:backgroundTint="@color/white"
                    android:layout_gravity="center"/>

                <Button
                    android:id="@+id/btWhatsappChatButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_layout_normal"
                    android:layout_weight="0.75"
                    android:background="@drawable/rounded_corners_background"
                    android:drawableLeft="@drawable/whatsapp"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/chat"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btCallButton"
                    android:layout_weight="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call_hr"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_extra_small"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="@dimen/margin_layout_normal"
                    android:padding="@dimen/padding_layout_small"
                    android:backgroundTint="@color/yellow"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</layout>